# MyUIProject

./: CMakeLists.txt  README.md
gallery/: CMakeLists.txt  Main.qml  main.cpp
gallery/backend/: GrpcClient.cpp  GrpcClient.h  GrpcTest.cpp
gallery/pages/: IconBrowser.qml  PageHome.qml  PageIcons.qml
protos/: stream.proto
src/: CMakeLists.txt  Icons.qml  Theme.qml
src/controls/: Button.qml  TextBox.qml
